--- a/popup.html
+++ b/popup.html
@@ -3,12 +3,9 @@
   <head>
     <meta charset="utf-8">
     <title>hello</title>
-    <link rel="stylesheet" href="styles/layout.css" media="screen" title="no title" charset="utf-8">
+    <link rel="stylesheet" type="text/css" href="styles/layout.css">
   </head>
   <body>
-    <p>
-      hello
-    </p>
     <ul>
       <li>app a</li>
       <li>app b</li>
