option page, bootstrap, i18n

--- a/popup.html
+++ b/popup.html
@@ -4,12 +4,13 @@
     <meta charset="utf-8">
     <title>hello</title>
     <link rel="stylesheet" type="text/css" href="styles/layout.css">
+    <link rel="stylesheet" type="text/css" href="bootstrap/css/bootstrap.min.css">
   </head>
   <body>
     <ul>
-      <li>app a</li>
-      <li>app b</li>
-      <li>app c</li>
+      <li><a href="#">app a</a></li>
+      <li><a href="#">app b</a></li>
+      <li><a href="#">app c</a></li>
     </ul>
   </body>
 </html>
