--- a/options.html
+++ b/options.html
@@ -24,6 +24,6 @@
   <div id="status"></div>
   <button id="save">Save</button>
 
-  <script src="scripts/options.js"></script>
+  <script src="js/options.js"></script>
 </body>
 </html>
