--- a/popup.html
+++ b/popup.html
@@ -3,14 +3,66 @@
   <head>
     <meta charset="utf-8">
     <title>hello</title>
-    <link rel="stylesheet" type="text/css" href="styles/layout.css">
-    <link rel="stylesheet" type="text/css" href="bootstrap/css/bootstrap.min.css">
+    <!-- Bootstrap -->
+    <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="css/bootstrap-theme.min.css">
+    <!-- Font Awesome -->
+    <link rel="stylesheet" type="text/css" href="css/font-awesome.min.css">
+    <!-- Non responsive-->
+    <link rel="stylesheet" type="text/css" href="css/non-responsive.css">
+    <!-- My styles -->
+    <link rel="stylesheet" type="text/css" href="css/mystyles.css">
   </head>
   <body>
-    <ul>
-      <li><a href="#">app a</a></li>
-      <li><a href="#">app b</a></li>
-      <li><a href="#">app c</a></li>
-    </ul>
+    <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
+        <div class="container">
+            <ul class="nav navbar-nav">
+                <li class="active"><a href="popup.html">Home</a></li>
+                <li><a href="#">About</a></li>
+                <li><a href="#">Contact</a></li>
+            </ul>
+        </div>
+    </nav>
+
+    <br>
+    <div class="container">
+        <div class="row">
+            <div class="col-xs-12">
+                <form class="form-horizontal" role="form">
+                    <div class="form-group">
+                        <label for="firstname" class="col-sm-2 control-label">身份证号生成器</label>
+                        <div class="col-sm-10">
+                            <div class="input-group">
+                                <div class="input-group-btn" data-toggle="buttons">
+                                    <label class="btn btn-info active">
+                                        <input type="radio" name="options" id="male" autocomplete="off" checked><i class="fa fa-male"></i>
+                                    </label>
+                                    <label class="btn btn-info">
+                                        <input type="radio" name="options" id="female" autocomplete="off"><i class="fa fa-female"></i>
+                                    </label>
+                                </div>
+                                <input type="text" class="form-control" placeholder="">
+                                <div class="input-group-btn">
+                                    <button id="btnGenerate" class="btn btn-success" type="button"><i class="fa fa-refresh"></i></button>
+                                    <button id="btnCopy" class="btn btn-success" type="button"><i class="fa fa-copy"></i></button>
+                                </div>
+                            </div><!-- /input-group -->
+                        </div>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
+    <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+    <script src="js/jquery.min.js"></script>
+    <!-- Include all compiled plugins (below), or include individual files as needed -->
+    <script src="js/bootstrap.min.js"></script>
+    <script src="js/idcard.js"></script>
+    <script type="text/javascript">
+        var btnGenerate = document.getElementById('btnGenerate');
+        btnGenerate.onclick = function() {
+            
+        }
+    </script>
   </body>
 </html>
