--- a/popup.html
+++ b/popup.html
@@ -35,16 +35,16 @@
                             <div class="input-group">
                                 <div class="input-group-btn" data-toggle="buttons">
                                     <label class="btn btn-info">
-                                        <input type="radio" name="options" id="male" value="1" autocomplete="off"><i class="fa fa-male"></i> 男
+                                        <input type="radio" name="options" id="male" value="1" autocomplete="off"><i class="fa fa-mars"></i> 男
                                     </label>
                                     <label class="btn btn-info">
-                                        <input type="radio" name="options" id="female" value="0" autocomplete="off"><i class="fa fa-female"></i> 女
+                                        <input type="radio" name="options" id="female" value="0" autocomplete="off"><i class="fa fa-venus"></i> 女
                                     </label>
                                 </div>
                                 <input type="text" id="inputIdcard" class="form-control">
                                 <div class="input-group-btn">
                                     <button id="btnGenerate" class="btn btn-success" type="button"><i class="fa fa-refresh"></i> 生成</button>
-                                    <button id="btnCopy" class="btn btn-success" type="button" data-toggle="tooltip" data-placement="top" title="复制到剪贴板" data-clipboard-target="#inputIdcard"><i class="fa fa-copy"></i> Copy</button>
+                                    <button id="btnCopy" class="btn btn-success" type="button" data-toggle="tooltip" data-placement="top" title="复制到剪贴板" data-clipboard-target="#inputIdcard"><span class="glyphicon glyphicon-copy"></span> Copy</button>
                                 </div>
                             </div><!-- /input-group -->
                         </div>
