--- a/contact.html
+++ b/contact.html
@@ -28,7 +28,7 @@
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
-                
+                <a class="btn btn-lg btn-social-icon btn-github" href="https://github.com/zuzhi" target="_blank"><i class="fa fa-github"> zuzhi</i></a>
             </div>
         </div>
     </div>
